# gridmind

./: .gitignore  hello.py  pyproject.toml
notebooks/: analysis.ipynb
src/: forecaster.py
