[project]
name = "gridmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "jupyter>=1.1.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langfuse>=3.14.5",
    "langgraph>=1.0.10",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "prophet>=1.3.0",
    "pyarrow>=23.0.1",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.55.0",
]
